--- a/Server/Service/Service.csproj
+++ b/Server/Service/Service.csproj
@@ -1,11 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>EXE</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Domain</RootNamespace>
+        <RootNamespace>Service</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\API\API.csproj" />
+        <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    </ItemGroup>
 
 </Project>
