--- a/Server/API/API.csproj
+++ b/Server/API/API.csproj
@@ -7,4 +7,9 @@
         <RootNamespace>API</RootNamespace>
     </PropertyGroup>
 
+
+    <ItemGroup>
+        <ProjectReference Include="..\Service\Service.csproj"/>
+    </ItemGroup>
+
 </Project>
