--- a/Server/Service/Service.csproj
+++ b/Server/Service/Service.csproj
@@ -16,6 +16,10 @@
       <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
+      <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+        
     </ItemGroup>
 
 </Project>
