Bug balance not changing after buying boards is fixed, admin can see all boards of all games, player can see only his own boards

--- a/Server/API/appsettings.Development.json
+++ b/Server/API/appsettings.Development.json
@@ -10,8 +10,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=DBuser;Password=DBpass"
   },
   "Jwt": {
-    "Issuer": "http://localhost",
-    "Audience": "http://localhost",
-    "Secret": "local-secret"
+    "Issuer": "http://localhost:6329",
+    "Audience": "http://localhost:6329",
+    "Secret": "9aF$7kLz&Xq1PjRt!2UvW0yBd@CmE3Hg"
   }
 }
