--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,5 @@ jobs:
         with:
           dotnet-version: '8'
       - uses: docker/setup-buildx-action@v3
-      - name: Change directory to Server
-        run: cd Server
-      - run: dotnet test
+      - run: dotnet test ./Server/Tests/YourTestProject.csproj
+
