--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           dotnet-version: '8'
       - uses: docker/setup-buildx-action@v3
-      - run: dotnet test ./Server/Tests/Tests.csproj
+      - run: dotnet test ./Server/Tests/YourTestProject.csproj
+
